# fcput

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
algo_ds/: TODO
algo_ds/bitmap/: CHECKLIST  README.md  bitmap.hpp
algo_ds/bitmap/tests/: basic  basic.cpp  bitmap  bitmap.cpp  testing.vim
algo_ds/common/: common.hpp
algo_ds/simd/: COMMON_INTERFACE  TODO  avx.hpp  common_simd.hpp  sse.hpp
architecture/: arch.hpp  compiler.hpp  lang_feat.hpp  os.hpp  simd.hpp
common/: common.hpp
computational/differentiation/: diff.hpp
differentiation/testing/: Makefile  immediate_diff.cpp
fcput-computational/differentiation/: TODO
fcput-computational/differentiation/testing/: idiff
fcput-computational/integration/include/: int.hpp
fcput-computational/math_types/: matrix.hpp
fcput-computational/mesh/: TODO  grid.hpp
graphics/: CMakeLists.txt  TODO  buffer.hpp  common.hpp  context.hpp  element_buffer.hpp  mesh.hpp  vertex_buffer.hpp
graphics/ansi/: ansi_seq.hpp  test  test.cpp
graphics/high/: TODO  api.hpp  object.hpp  plot.hpp  wmanager.hpp
graphics/high/OpenGL/: plot.cpp
graphics/high/tests/: plot.cpp
graphics/include/: buffer.hpp  context.hpp  element_buffer.hpp  error.hpp  mesh.hpp  vertex_buffer.hpp
graphics/low/: TODO
graphics/low/OpenGL/: low_api.hpp
graphics/low/OpenGL/include/: buffer.hpp  mesh.hpp  vertex_buffer.hpp
graphics/low/OpenGL/src/: buffer.cpp  vertex_buffer.cpp
graphics/src/: buffer.cpp  element_buffer.cpp  vertex_buffer.cpp
graphics/testing/: CMakeLists.txt  any_test.cpp  test.cpp  triangle_test.cpp
graphics/testing/ilk/: any_test.ilk  test.ilk  triangle_test.ilk
math_types/: vec.hpp
mesh/: CMakeLists.txt
